docs: update tutorials

--- a/docs/tutorials/0-1.md
+++ b/docs/tutorials/0-1.md
@@ -2,7 +2,7 @@
 ====
 
 !!! info "注意"
-    目前此教程对应的版本为 `2.6.19`！
+    目前此教程对应的版本为 `2.6.20`！
 
 一、本教程面向的群众
 ------------------
@@ -14,7 +14,7 @@
 二、学习前置要求
 --------------
 
-* 必须要会 Python（不熟练也行），如果可以，掌握 Python 的内置模块 tkinter 会更好（不熟练也可）；
+* 必须要会 Python（不熟练也行），如果可以，掌握 Python 的内置模块 `tkinter` 会更好（不熟练也可）；
 * 最好有面向对象的编程思想（没有也无妨）；
 
 三、推荐的开发 IDE
@@ -27,7 +27,7 @@ Visual Studio Code > PyCharm > Visual Studio
 四、作者之（鸟）语
 ----------------
 
-作者本人渣渣一个，目前<mark>非</mark>计算机专业大三在读，凝心血之力搞了这个二次开发的界面模块，~~纯属瞎搞~~，有兴趣的朋友可以看看源代码，帮我找找 bug，提提建议啥的。
+作者本人渣渣一个，目前非计算机专业大三在读，凝心血之力搞了这个二次开发的界面模块，~~纯属瞎搞~~，有兴趣的朋友可以看看源代码，帮我找找 bug，提提建议啥的。
 
 这玩意儿我已经开发一年多了，学业繁忙（尽管我学的很渣），实际能抽出来更新的时间并不充裕。如果能有人加入我一起开发那就再好不过了！~~再不来个人帮忙开发，我就快死了，这玩意儿太 TM 肝了！！！~~
 
