--- a/docs/tutorials/5-2.md
+++ b/docs/tutorials/5-2.md
@@ -35,7 +35,7 @@ image = tkt.PhotoImage('example.gif')
 for _ in image.parse():  # 解析过程
     pass  # 表面上，啥也没干，实际上，在解析……
 
-image.play(canvas, canvas_item_id, 30)
+image.start(canvas, canvas_item_id, interval=30)
 
 root.mainloop()
 ```
@@ -60,7 +60,7 @@ image = tkt.PhotoImage('example.gif')
 # for _ in image.parse():  # 解析过程
 #     pass  # 表面上，啥也没干，实际上，在解析……
 
-image.play(canvas, canvas_item_id, 30)
+image.start(canvas, canvas_item_id, interval=30)
 
 root.mainloop()
 ```
@@ -72,29 +72,23 @@ root.mainloop()
 
 ### 4.1 播放
 
-从上文中可以看出，`PhotoImage.play` 就是播放了。
+从上文中可以看出，`PhotoImage.start` 就是播放了。
 
 !!! warning "警告"
-    没事别调用两遍 `play` 方法，这样的话 gif 的播放会卡碟的……你可以试一试。
+    没事别调用两遍 `start` 方法，这样的话 gif 的播放会卡碟的……你可以试一试。
 
 ### 4.2 暂停或继续
 
-目前对暂停和继续的支持不是很友好，但并非不能实现。
+调用 `PhotoImage.pause` 可以暂停播放，调用 `PhotoImage.play` 可以继续播放。
 
-暂停通过以下代码实现：
+此外，使对应的画布的 `lock` 属性为 `False` 时也将暂停播放，实则为减少不必要的性能消耗。如以下代码：
 
 ```python
 canvas.lock(False)
 ```
 
-播放通过以下代码实现：
-
-```python
-canvas.lock(True)
-```
-
-其中的 `canvas` 就是显示 gif 图片的画布。实际上这个 `lock` 是调用其他功能的方法，只不过会顺便将 gif 暂停和播放。因此，慎用。
+但并不推荐使用这种方式来播放和暂停动图，因为这会导致这个画布上的所有动图都暂停或者继续播放。同时，这个 `lock` 是调用其他功能的方法，只不过会顺便将 gif 暂停和播放。因此，慎用，最好不这样用。
 
 ### 4.3 终止
 
-通过调用方法 `PhotoImage.stop` 可以终止 gif 的播放，但注意，一旦终止无法重新播放！
+通过调用方法 `PhotoImage.stop` 可以终止 gif 的播放，但注意，一旦终止无法通过方法 `play` 重新播放，只能重新通过方法 `start` 来重新播放！
