--- a/docs/tutorials/6-1.md
+++ b/docs/tutorials/6-1.md
@@ -92,16 +92,51 @@ for i, color_tup in enumerate(color_tup_lst):
 root.mainloop()
 ```
 
-??? note "点击查看实现效果"
-    ![png](images/6.1-2.2-1.png)
+下面是实现的效果图：
 
-<!-- ### 2.3 color 函数的高级操作
+![png](images/6.1-2.2-1.png)
 
-当然，这一系列颜色之间的 RGB 码是等差的，我们也可以设置非等差的，来得到一些不同的效果：
+### 2.3 自定义渐变规则
+
+上面的这一系列颜色之间的 RGB 码是等差的，我们也可以设置非等差的，来得到一些不同的效果（比如让它们的渐变规则为正弦函数）。
+
+下面我们通过设置 `color` 函数的参数 `controller`，来实现自定义的渐变规则，此处以正弦函数的区间 [0, π] 为例。参数 `controller` 是一个元组（列表也行），其格式如下：
 
 ```python
-
+(控制函数, 区间起始值, 区间终止值)
 ```
 
-??? note "点击查看实现效果"
-    ![png](images/6.1-2.2-2.png) -->
+!!! warning "警告"
+    控制器参数不是任意函数都可以的！函数在指定区间内的区域内必须为非负值，否则在计算过程中会得到负数的 RGB 码，这是不正确的。
+
+```python
+import math
+
+import tkintertools as tkt
+
+root = tkt.Tk("自定义的渐变色", 1600, 900)
+canvas = tkt.Canvas(root, 1600, 900, 0, 0)
+
+color_tup_lst = [
+    ("red", "blue"),
+    ("#00FFFF", "purple"),
+    ("#FF00FF", "#FFFF00"),
+    ("white", "black"),
+    ("springgreen", "#FFF")
+]
+
+for i, color_tup in enumerate(color_tup_lst):
+    color_lst = tkt.color(color_tup, seqlength=1400, controller=(lambda x: abs(math.sin(x)), 0, math.pi))
+    for j, c in enumerate(color_lst):
+        x = j + 100
+        y = i*150 + 100
+        canvas.create_line(x, y, x, y + 100, fill=c, width=2)
+
+root.mainloop()
+```
+
+下面是实现的效果图：
+
+![png](images/6.1-2.3-1.png)
+
+和之前的那一张图相比，你发现了什么不同吗？实际上，第一张图也是有控制函数的，只不过它的函数为单位正比例函数 y = x 区间 [0, 1] 部分。
