--- a/docs/tutorials/6-2.md
+++ b/docs/tutorials/6-2.md
@@ -1,5 +1,121 @@
 §6.2 动画制作
 ============
 
-!!! tip "提示"
-    作者正在疯狂更新中……
+`tkintertools` 中的大部分动画都是用动画类 `Animation` 实现的。`Animation` 的文档见 [Animation](../documents/main.md#01-animation)。
+
+一、简单动画
+-----------
+
+### 1.1 移动一个简单的方块
+
+我们可以通过 Animation 来平移一个简单的方块，下面是一个简单的示例：
+
+```python
+import tkintertools as tkt
+
+root = tkt.Tk("平移方块", 1600, 900)
+canvas = tkt.Canvas(root, 1600, 900, 0, 0)
+rect = canvas.create_rectangle(100, 100, 200, 200, fill="orange")
+
+tkt.Animation(rect, 1000, translation=(500, 500), canvas=canvas).run()
+
+root.mainloop()
+```
+
+下面是效果图：
+
+![gif](images/6.2-1.1-1.gif)
+
+### 1.2 按规则移动一个方块
+
+如果只是像上面那样移动一个方块，缺少了些许韵味，我们可以自定义一个方块运行的控制函数，来使它按照我们的意思来运动：
+
+```python
+import math
+
+import tkintertools as tkt
+
+root = tkt.Tk("平移方块", 1600, 900)
+canvas = tkt.Canvas(root, 1600, 900, 0, 0)
+rect = canvas.create_rectangle(100, 100, 200, 200, fill="orange")
+
+tkt.Animation(rect, 1000, translation=(500, 500),
+              canvas=canvas, controller=(math.sin, 0, math.pi)).run()
+
+root.mainloop()
+```
+
+下面是效果图：
+
+![gif](images/6.2-1.2-1.gif)
+
+### 1.3 移动其他东西
+
+当然，我们不只是能移动一个简单方块，我们还可以利用 Animation 来移动控件！
+
+```python
+import math
+
+import tkintertools as tkt
+
+root = tkt.Tk("平移方块", 1600, 900)
+canvas = tkt.Canvas(root, 1600, 900, 0, 0)
+button = tkt.Button(canvas, 100, 100, 200, 50, text='按钮')
+
+tkt.Animation(button, 2000, translation=(500, 500),
+              controller=(math.sin, 0, math.pi / 2), fps=90).run()
+
+root.mainloop()
+```
+
+下面是效果图：
+
+![gif](images/6.2-1.3-1.gif)
+
+当然，这对 tkinter 的原生控件也是支持的！
+
+```python
+import math
+import tkinter
+
+import tkintertools as tkt
+
+root = tkt.Tk("平移方块", 1600, 900)
+
+button = tkinter.Button(root, text='原生按钮')
+
+button.place(width=200, height=50, x=100, y=100)
+
+tkt.Animation(button, 2000, translation=(500, 500),
+              controller=(math.sin, 0, math.pi / 2), fps=90).run()
+
+root.mainloop()
+```
+
+下面是效果图：
+
+![gif](images/6.2-1.3-2.gif)
+
+二、组合动画
+-----------
+
+### 2.1 多个动画
+
+前面说到了 Animation 改变控件的位置和颜色，实际上，这两者可以结合起来使用，同时改变。
+
+### 2.2 延时动画
+
+### 2.3 自定义动画函数
+
+当然，还有其他很多动画，Animation 并不直接提供，但它提供一个 API 可以让我们使用它里面的动画生成方法。
+
+三、高级动画
+-----------
+
+### 3.1 动画类详解
+
+此处详解 Animation 的各个参数。
+
+### 3.2 3D 动画
+
+此部分见 [7.3 3D 动画](./7-3.md)
