docs: update tutorials

--- a/docs/tutorials/1-3.md
+++ b/docs/tutorials/1-3.md
@@ -198,13 +198,19 @@ root.mainloop()  # 窗口进入消息事件循环
 
 * macOS 14:
 
-    暂时没有内容，近期会更新。
+    <details><summary><b>点击查看实现效果</b></summary>
+
+    ![png](images/1.3-2.4-2.png)
+
+    </details>
+
+    字体大小不太一样，但这可以改，问题不大。
 
 * Ubuntu 22.04（WSL）: 
 
     <details><summary><b>点击查看实现效果</b></summary>
 
-    ![png](images/1.3-2.4-2.png)
+    ![png](images/1.3-2.4-3.png)
 
     </details>
 
@@ -214,7 +220,7 @@ root.mainloop()  # 窗口进入消息事件循环
 
     <details><summary><b>点击查看实现效果</b></summary>
 
-    ![png](images/1.3-2.4-3.png)
+    ![png](images/1.3-2.4-4.png)
 
     </details>
 
