--- a/docs/tutorials/6-2.md
+++ b/docs/tutorials/6-2.md
@@ -1,6 +1,9 @@
 §6.2 动画制作
 ============
 
+!!! info "注意"
+    该小节仍在更新中，可能有不准确的地方！
+
 `tkintertools` 中的大部分动画都是用动画类 `Animation` 实现的。`Animation` 的文档见 [Animation](../documents/main.md#01-animation)。
 
 一、简单动画
