--- a/docs/tutorials/7-2.md
+++ b/docs/tutorials/7-2.md
@@ -45,7 +45,7 @@ root.mainloop()
 二、3D 文本
 -----------
 
-在 `tools_3d` 中，真正的 3D 文本实际指的是 `tools_3d.Text` 对象。它不同于标记文本，它的字体大小会随着空间位置的变化而变化。
+在 `tools_3d` 中，真正的 3D 文本实际指的是 `tools_3d.Text3D` 对象。它不同于标记文本，它的字体大小会随着空间位置的变化而变化。
 
 下面是一个简单的示例：
 
@@ -62,7 +62,7 @@ import random
 import tkintertools as tkt
 from tkintertools import tools_3d as t3d
 
-root = tkt.Tk('3D Text', 1280, 720)
+root = tkt.Tk('Text3D', 1280, 720)
 space = t3d.Space(root, 1280, 720, 0, 0, bg='black', keep=False)
 
 r = 300  # 3D 文本球半径
@@ -77,7 +77,7 @@ for _ in range(300):
         z /= k
         t = chr(random.randint(65, 90))
         c = f'#{random.randint(1, 256 ** 3 - 1):06X}'
-        t3d.Text(space, map(round, (x, y, z)), text=t, fill=c)
+        t3d.Text3D(space, map(round, (x, y, z)), text=t, fill=c)
 
 space.space_sort()
 root.mainloop()
