--- a/docs/tutorials/7-3.md
+++ b/docs/tutorials/7-3.md
@@ -69,24 +69,24 @@ X = t3d.Line(space, [0, 0, 0], [1, 0, 0], fill='')
 Y = t3d.Line(space, [0, 0, 0], [0, 1, 0], fill='')
 Z = t3d.Line(space, [0, 0, 0], [0, 0, 1], fill='')
 
-ring = {'x': [], 'y': [], 'z': []}  # type: dict[str, list[t3d.Text]]
-line = {'x': [], 'y': [], 'z': []}  # type: dict[str, list[t3d.Text]]
+ring = {'x': [], 'y': [], 'z': []}  # type: dict[str, list[t3d.Text3D]]
+line = {'x': [], 'y': [], 'z': []}  # type: dict[str, list[t3d.Text3D]]
 
 for i in range(26):
     t = chr(65+i)
     φ = i/26 * math.tau
     c1 = r * math.sin(φ)
     c2 = r * math.cos(φ)
-    ring['x'].append(t3d.Text(space, [0, c1, c2], text=t, fill='#FF0000'))
-    ring['y'].append(t3d.Text(space, [c1, 0, c2], text=t, fill='#00FF00'))
-    ring['z'].append(t3d.Text(space, [c1, c2, 0], text=t, fill='#0000FF'))
+    ring['x'].append(t3d.Text3D(space, [0, c1, c2], text=t, fill='#FF0000'))
+    ring['y'].append(t3d.Text3D(space, [c1, 0, c2], text=t, fill='#00FF00'))
+    ring['z'].append(t3d.Text3D(space, [c1, c2, 0], text=t, fill='#0000FF'))
 
 for i in range(10):
     t = str(i)
     c = (i+1) * 600/11 - r
-    line['x'].append(t3d.Text(space, [c, 0, 0], text=t, fill='#00FFFF'))
-    line['y'].append(t3d.Text(space, [0, c, 0], text=t, fill='#FF00FF'))
-    line['z'].append(t3d.Text(space, [0, 0, c], text=t, fill='#FFFF00'))
+    line['x'].append(t3d.Text3D(space, [c, 0, 0], text=t, fill='#00FFFF'))
+    line['y'].append(t3d.Text3D(space, [0, c, 0], text=t, fill='#FF00FF'))
+    line['z'].append(t3d.Text3D(space, [0, 0, c], text=t, fill='#FFFF00'))
 
 
 def animation():
@@ -154,7 +154,7 @@ for i, c in enumerate(fill):
     φ = (15 - i) / 60 * math.tau
     x = r * math.cos(φ)
     y = r * math.sin(φ)
-    t3d.Text(space, [0, x, y], text=t, fill=c, font=(tkt.FONT, -size))
+    t3d.Text3D(space, [0, x, y], text=t, fill=c, font=(tkt.FONT, -size))
 
 
 time_ = list(map(int, time.strftime('%H %M %S', time.localtime()).split()))
