--- a/docs/tutorials/0-1.md
+++ b/docs/tutorials/0-1.md
@@ -2,7 +2,12 @@
 ====
 
 !!! info "注意"
-    目前此教程对应的版本为 `2.6.21`！
+    目前此教程对应的环境如下：
+
+    * tkintertools: `2.6.21`
+    * Python: `3.12.0`
+    * Windows: `23H2`
+    
 
 一、本教程面向的群众
 ------------------
