--- a/docs/tutorials/1-1.md
+++ b/docs/tutorials/1-1.md
@@ -2,29 +2,17 @@
 comments: true
 ---
 
-§1.1 安装 tkintertools
-======================
+# §1.1 安装 tkintertools
 
-一、运行环境
------------
+## 一、运行环境
 
 `tkintertools` 是跨平台的，至少可以在下面多个平台上运行（已测试）：
 
-![Windows10](https://img.shields.io/badge/Windows-10-green?logo=windows10)
-![Windows11](https://img.shields.io/badge/Windows-11-green?logo=windows11)
-![macOS](https://img.shields.io/badge/macOS-11-green?logo=macOS)
-![macOS](https://img.shields.io/badge/macOS-14-green?logo=macOS)
-![Ubuntu22.04](https://img.shields.io/badge/Ubuntu-22.04-green?logo=ubuntu)
-![Deepin20.9](https://img.shields.io/badge/Deepin-20.9-green?logo=deepin)
+![Windows10](https://img.shields.io/badge/Windows-10-green?logo=windows10) ![Windows11](https://img.shields.io/badge/Windows-11-green?logo=windows11) ![macOS](https://img.shields.io/badge/macOS-11-green?logo=macOS) ![macOS](https://img.shields.io/badge/macOS-14-green?logo=macOS) ![Ubuntu22.04](https://img.shields.io/badge/Ubuntu-22.04-green?logo=ubuntu) ![Deepin20.9](https://img.shields.io/badge/Deepin-20.9-green?logo=deepin)
 
 同时支持以下版本的 Python：
 
-![Python3.8](https://img.shields.io/badge/Python-3.8-blue?logo=python)
-![Python3.9](https://img.shields.io/badge/Python-3.9-blue?logo=python)
-![Python3.10](https://img.shields.io/badge/Python-3.10-blue?logo=python)
-![Python3.11](https://img.shields.io/badge/Python-3.11-blue?logo=python)
-![Python3.12](https://img.shields.io/badge/Python-3.12-blue?logo=python)
-![Python3.13](https://img.shields.io/badge/Python-3.13-blue?logo=python)
+![Python3.8](https://img.shields.io/badge/Python-3.8-blue?logo=python) ![Python3.9](https://img.shields.io/badge/Python-3.9-blue?logo=python) ![Python3.10](https://img.shields.io/badge/Python-3.10-blue?logo=python) ![Python3.11](https://img.shields.io/badge/Python-3.11-blue?logo=python) ![Python3.12](https://img.shields.io/badge/Python-3.12-blue?logo=python) ![Python3.13](https://img.shields.io/badge/Python-3.13-blue?logo=python)
 
 相关的依赖包（小部分 Python 没有自带，如 Linux 自带的 Python）：
 
@@ -34,8 +22,7 @@ comments: true
 
 ![Pillow](https://img.shields.io/badge/Pillow-≥10.0-red)
 
-二、获取稳定版
--------------
+## 二、获取稳定版
 
 稳定版，相对于开发版本而言比较稳定，在发布之前有个测试的步骤，经过测试之后（各项功能正常运行，多平台兼容）才会发布，bug 大体上是没有那么多的，推荐使用这个。
 
@@ -76,57 +63,59 @@ import tkinter
 我们不直接安装 `tkinter`，因为直接安装 `tkinter` 的步骤非常繁琐且容易出错，这里推荐使用 Miniconda 来构建虚拟环境，不易出错且不影响 Linux 自带的 Python 环境。
 
 !!! info "注意"
+
     这里我们不使用 Anaconda 来搭建虚拟环境，Anaconda 因为附带很多我们用不到的功能导致非常庞大，而 Miniconda 只有其核心部分，占用存储空间比较小，操作起来也比较方便。
 
 1. 安装 Miniconda
 
-    这里给出官方安装操作：https://docs.conda.io/projects/miniconda/en/latest/miniconda-install.html
+   这里给出官方安装操作：https://docs.conda.io/projects/miniconda/en/latest/miniconda-install.html
 
-    尽量选择较新版本的 Miniconda，这将决定 Miniconda 的 base 环境 Python 版本。
+   尽量选择较新版本的 Miniconda，这将决定 Miniconda 的 base 环境 Python 版本。
 
 2. 进入 base 环境并验证 `tkinter` 是否安装
-    
-    一般来说，安装完 Miniconda 后终端将会进入 base 环境，此时输入 python 将会进入 base 中的 Python 环境，输入以下命令来确认 `tkinter` 是否安装：
 
-    ```python
-    import tkinter
-    ```
+   一般来说，安装完 Miniconda 后终端将会进入 base 环境，此时输入 python 将会进入 base 中的 Python 环境，输入以下命令来确认 `tkinter` 是否安装：
 
-    正常来说，此时是不会报错的，到这里 `tkintertools` 的运行环境就安装完毕了。
+   ```python
+   import tkinter
+   ```
+
+   正常来说，此时是不会报错的，到这里 `tkintertools` 的运行环境就安装完毕了。
 
 3. 安装 `tkintertools`
 
-    在对应环境（非交互环境）中输入以下指令进行安装：
+   在对应环境（非交互环境）中输入以下指令进行安装：
 
-    ```
-    python -m pip install tkintertools
-    ```
+   ```
+   python -m pip install tkintertools
+   ```
 
-三、获取预览版（可选）
--------------------
+## 三、获取预览版（可选）
 
-预览版本，可能有新功能，bug 可能会比较多，但也可能会比原来的版本更加稳定。预览版没有经过多操作系统的测试，仅能保证在 Windows 系统下运行所有功能，在其他的操作系统上，可能有部分功能无法正常运行。  
+预览版本，可能有新功能，bug 可能会比较多，但也可能会比原来的版本更加稳定。预览版没有经过多操作系统的测试，仅能保证在 Windows 系统下运行所有功能，在其他的操作系统上，可能有部分功能无法正常运行。
 
 若想要提前获取更多新功能的 `tkintertools`，可以安装各种预览版的 `tkintertools`！下面对预览关键词做出说明：
 
-* `dev`: 开发中的版本，没有任何稳定保证（甚至可能无法运行）
-* `alpha`: 前测试版本，不太稳定，API 仍可能被更改
-* `beta`: 后测试版本，基本稳定，API 不再更改
-* `rc`: 准备发布的版本，与稳定版无太大差异
+- `dev`: 开发中的版本，没有任何稳定保证（甚至可能无法运行）
+- `alpha`: 前测试版本，不太稳定，API 仍可能被更改
+- `beta`: 后测试版本，基本稳定，API 不再更改
+- `rc`: 准备发布的版本，与稳定版无太大差异
 
 !!! tip "提示"
-    预览版本必须要指定版本号才能下载！若不指定版本号，则将会下载最新的稳定版本！  
-    预览版本号可在仓库中的 README.md 中找到，一般格式为版本号后加 `.alpha*` 等，下面的只是一个格式，并非具体的版本号！（* 表示数字通配符）
+
+    预览版本必须要指定版本号才能下载！若不指定版本号，则将会下载最新的稳定版本！
+
+    预览版本号可在仓库中的 README.md 中找到，一般格式为版本号后加 `.alpha*` 等，下面的只是一个格式，并非具体的版本号！（\* 表示数字通配符）
 
 ```
 pip install tkintertools==*.*.*.alpha2
 ```
 
 !!! warning "警告"
+
     开发版仅作示例，各函数或类的 API 并非最终确定结果，直接使用开发版可能导致后续无法与稳定版兼容！
 
-四、更新与查看版本
-----------------
+## 四、更新与查看版本
 
 ### 4.1 更新版本
 
