--- a/docs/tutorials/5-3.md
+++ b/docs/tutorials/5-3.md
@@ -2,16 +2,15 @@
 comments: true
 ---
 
-§5.3 图片进阶
-============
+# §5.3 图片进阶
 
 这一小节不讲别的，就讲进度条和 gif 解析的联动。
 
 !!! info "注意"
+
     此小节会涉及到一些与多线程相关的知识。
 
-一、获取 gif 图片的总帧数
------------------------
+## 一、获取 gif 图片的总帧数
 
 要想知道 gif 解析了多少，必须得先知道 gif 的总帧数。你可以通过其他的软件来获取 gif 图的总帧数，你也可也通过下面的代码来获取 gif 的总帧数。
 
@@ -24,12 +23,12 @@ print(image.get_total_frames())
 ```
 
 !!! tip "提示"
+
     当 gif 的总帧数比较大的时候，上面代码还是比较慢的，此时如果你有 `PIL` 库，这一过程将会加快几倍。当然，如果你没有 `PIL` 库，上面的代码依然可以获得 gif 的总帧数，只不过慢一些罢了。
 
 通常我们并不会在正式程序中直接使用上述方法来获取 gif 的总帧数，我们应该在正式程序之前，就通过测试得到 gif 的帧数，然后作为常量写在程序中。因为获取 gif 总帧数并不是一个很快的过程，如果直接在正式程序中调用，卡顿的现象将十分明显。
 
-二、以进度条展示加载进度
-----------------------
+## 二、以进度条展示加载进度
 
 ### 2.1 运行前解析的进度条展示
 
@@ -94,4 +93,5 @@ root.mainloop()
 看上面的效果图，你可能看不出来解析时和没有解析时有什么区别，但其实解析时的延迟为 1 毫秒（为了减少卡顿感和加速解析），而正式播放时为 30 毫秒，几乎没有区别的原因是解析占用了一部分时间。一般可能在测试中会使用这种方式。
 
 !!! question "猜你想问：为什么第二段代码不同于第一段代码，没有使用多线程模块呢？"
+
     第二段代码的解析过程被嵌入在 UI 线程中了，所以没有使用多线程模块了。这样虽然不需要使用多线程模块，但会在解析过程中略微降低 UI 线程的响应速度。
