--- a/docs/tutorials/6-2.md
+++ b/docs/tutorials/6-2.md
@@ -2,13 +2,11 @@
 comments: true
 ---
 
-§6.2 动画制作
-============
+# §6.2 动画制作
 
 `tkintertools` 中的大部分动画都是用动画类 `Animation` 实现的。`Animation` 的文档见 [01. Animation](../documents/main.md#01-animation)。
 
-一、简单动画
------------
+## 一、简单动画
 
 ### 1.1 移动一个简单的方块
 
@@ -94,8 +92,7 @@ root.mainloop()
 
 效果图就不放了哈，自己可以试试。
 
-二、组合动画
------------
+## 二、组合动画
 
 ### 2.1 多个动画
 
@@ -119,6 +116,7 @@ tkt.Animation(item, 1000, translation=(0, 300), canvas=canvas,
 
 root.mainloop()
 ```
+
 下面是效果图：
 
 ![gif](images/6.2-2.1-1.gif)
@@ -139,8 +137,7 @@ tkinter.Widget.after(延迟毫秒, 关联函数, 关联函数的各个参数...)
 
 这里自定义函数用到的 API 就是 `Animation` 的初始化参数 `controller`。在前面小节中的 `color` 函数里，我们就已经接触过了，它们的本质实际都是一样的。但是，`color` 函数对控制函数及其上下界是有要求的，因为通过上下界中的值带入到控制函数求得的值不能是负数，毕竟 `color` 函数通过控制函数计算的是比例，必须是非负值。一旦计算得到负数，就会触发报错。
 
-三、高级动画
------------
+## 三、高级动画
 
 ### 3.1 原生动画
 
