--- a/docs/tutorials/7-1.md
+++ b/docs/tutorials/7-1.md
@@ -2,11 +2,9 @@
 comments: true
 ---
 
-§7.1 3D 对象
-============
+# §7.1 3D 对象
 
-一、3D 对象的容器控件
--------------------
+## 一、3D 对象的容器控件
 
 `tkintertools` 的 3D 画布不是只有一个，它实际的继承关系是下面这样的：
 
@@ -35,6 +33,7 @@ flowchart RL
 不过 `Space` 类中已经帮我们内置好了这个方法的调用，因此 `Space` 相比于 `Canvas3D` 来说非常方便。不过有时候我们并不想让用户能够拖动画面，我们可能只是想展示某一 3D 动画或者画面，这时 `Canvas3D` 就派上用场了！因为它根本就没有对应事件的绑定！
 
 !!! info "注意"
+
     尽管 `Space` 如此方便了，但是无论是 `Space` 还是 `Canvas3D`，在新增加一个 3D 对象的时候，都应该调用一下 `space_sort` 方法来更新画面，因为考虑到性能和某些特殊要求的情况下，这个时候 `space_sort` 方法并不会被自动调用。
 
 ### 1.3 3D 容器控件的坐标规划
@@ -50,10 +49,10 @@ flowchart RL
 尽管 3D 对象的基准在画布中央，但是这并不会影响 UI 控件的布局。和其他画布一样，UI 控件仍是以左上角为基准，反平面坐标系（y 轴反向）。
 
 !!! tip "提示"
+
     无论怎样布局，UI 控件总是在 3D 对象的上方，也就是说，3D 对象不会遮挡 UI 控件。
 
-二、创建基本的 3D 对象
---------------------
+## 二、创建基本的 3D 对象
 
 基本的 3D 对象包括点（`Point`）、线（`Line`）和面（`Side`），后面还会讲到几种稍微复杂的 3D 对象，如长方体等。
 
@@ -64,7 +63,9 @@ flowchart RL
 我们通过类 `Point` 来显示一个点，具体的参数可以去文档中查看。下面的代码我们绘制了多个点。
 
 !!! info "注意"
-    点本身是没有大小的，但是这里我们为了显示出它，给了它一个虚拟的大小，但是这个大小并不会随着这个点在视觉上的远近而缩放，因为一旦进行缩放，那就是不是点，而是球了。  
+
+    点本身是没有大小的，但是这里我们为了显示出它，给了它一个虚拟的大小，但是这个大小并不会随着这个点在视觉上的远近而缩放，因为一旦进行缩放，那就是不是点，而是球了。
+
     点的大小只是方便我们观察它而设定的，你可以根据你的喜好或者需要，设定它显示出来的大小。
 
 下面只是随机地在一些位置绘制了一个点，总体上表现为一个球：
@@ -276,11 +277,12 @@ root.mainloop()
 </details>
 
 !!! warning "警告"
-    目前由于技术原因，实际过程中不建议给面的内部上色，当两个面的距离比较近时，这两个面可能出现前后位置关系显示颠倒的问题！尚无比较好的解决办法！对于后面的复杂 3D 对象（即几何体）也是如此。  
+
+    目前由于技术原因，实际过程中不建议给面的内部上色，当两个面的距离比较近时，这两个面可能出现前后位置关系显示颠倒的问题！尚无比较好的解决办法！对于后面的复杂 3D 对象（即几何体）也是如此。
+
     目前前后位置的确定是通过欧几里得距离计算得到的，在两个面之间有一定距离时才能正确显示其前后位置关系。
 
-三、创建复杂的 3D 对象
---------------------
+## 三、创建复杂的 3D 对象
 
 复杂的 3D 对象是指非基本的对象，如长方体（`Cuboid`）、四面体（`Tetrahedron`）等复杂的几何体，当然，你也可以直接用基本的 3D 对象将它们模仿出来，但这并不是封装好的，它们并非一个整体，直接使用 `Geometry` 及其子类是更加推荐的选择。
 
