--- a/docs/tutorials/7-2.md
+++ b/docs/tutorials/7-2.md
@@ -2,11 +2,9 @@
 comments: true
 ---
 
-§7.2 3D 文本
-============
+# §7.2 3D 文本
 
-一、标记文本
------------
+## 一、标记文本
 
 标记文本并不算是真正的 3D 的文本，它只是在画布上某一位置进行标记，其大小并不会随着标记点位置的改变而改变。
 
@@ -46,8 +44,7 @@ root.mainloop()
 
 </details>
 
-二、3D 文本
------------
+## 二、3D 文本
 
 在 `tools_3d` 中，真正的 3D 文本实际指的是 `tools_3d.Text3D` 对象。它不同于标记文本，它的字体大小会随着空间位置的变化而变化。
 
