--- a/docs/tutorials/7-3.md
+++ b/docs/tutorials/7-3.md
@@ -2,11 +2,9 @@
 comments: true
 ---
 
-§7.3 3D 动画
-============
+# §7.3 3D 动画
 
-一、3D 对象 API
----------------
+## 一、3D 对象 API
 
 3D 对象有许许多多方法供我们调用。
 
@@ -35,15 +33,13 @@ comments: true
 
 其实复杂的 3D 对象本质上就是基本 3D 对象的组合体而已，因此它们在拥有基本 3D 对象的 API 的前提下，还有其他的方法。内置的两种复杂几何体都是继承于类 `Geometry`，它们本身没有额外的方法，但是 `Geometry` 相比于基本 3D 对象，增加了一个 `append` 方法，可以将更多的基本 3D 对象添加到一个几何体实例中去。
 
-二、通过动画类实现 3D 动画
-------------------------
+## 二、通过动画类实现 3D 动画
 
 动画类指的就是上一章的 `Animation`，通过它我们可以很方便地实现一些简单乃至复杂的动画。
 
 有了 3D 对象的 API 之后，我们就可以通过动画类来实现各种各样~~花里胡哨~~的效果！`Animation` 的使用方法已在上一章讲述，这里不再赘述。
 
-三、通过 after 方法实现简单动画
------------------------------
+## 三、通过 after 方法实现简单动画
 
 除了可以使用 `Animation` 类之外，我们还可以使用 `tkinter` 模块中的功能来实现一些简单的功能。
 
