--- a/docs/tutorials/7-4.md
+++ b/docs/tutorials/7-4.md
@@ -2,11 +2,9 @@
 comments: true
 ---
 
-§7.4 3D 进阶
-============
+# §7.4 3D 进阶
 
-一、自定义 3D 画布
------------------
+## 一、自定义 3D 画布
 
 ### 1.1 绑定事件
 
@@ -59,6 +57,7 @@ root.mainloop()
 其实，`Space` 确实绑定了一些事件，但是并没有涉及到按键 + 和 -，因此没有上面影响，但这并不代表所有的事件都没有影响，在使用 `Space` 的时候，我们尽量要避开那些绑定的事件，如果确实需要绑定新的事件，但又不想覆盖掉旧的的事件，那么在绑定新事件的时候，你应该将参数 `add` 设为 `'+'`。
 
 !!! tip "提示"
+
     此处不要把 `add` 参数的值和前面的绑定加号事件混淆了，`'+'` 表示新事件的绑定是附加的，而非原来的覆盖。
 
 比如像下面这样：
