--- a/docs/tutorials/0-1.md
+++ b/docs/tutorials/0-1.md
@@ -2,39 +2,34 @@
 comments: true
 ---
 
-前言
-====
+# 前言
 
 !!! info "注意"
+
     目前此教程对应的环境如下：
 
     * tkintertools: `2.6.21`
     * Python: `3.12.0`
     * Windows: `23H2`
-    
 
-一、本教程面向的群众
-------------------
+## 一、本教程面向的群众
 
 主要面向想花费极少时间（包括学习时间和开发时间），开发较为美观的，方便的图形化程序。
 
 感兴趣的话，任何人皆可，教程通俗易懂，（应该）没有看不懂的地方。
 
-二、学习前置要求
---------------
+## 二、学习前置要求
 
-* 必须要会 Python（不熟练也行），如果可以，掌握 Python 的内置模块 `tkinter` 会更好（不熟练也可）；
-* 最好有面向对象的编程思想（没有也无妨）；
+- 必须要会 Python（不熟练也行），如果可以，掌握 Python 的内置模块 `tkinter` 会更好（不熟练也可）；
+- 最好有面向对象的编程思想（没有也无妨）；
 
-三、推荐的开发 IDE
------------------
+## 三、推荐的开发 IDE
 
 Visual Studio Code > PyCharm > Visual Studio
 
 顺便一提，我本人用的是 [Visual Studio Code](https://code.visualstudio.com/)。
 
-四、作者之（鸟）语
-----------------
+## 四、作者之（鸟）语
 
 作者本人渣渣一个，目前非计算机专业大三在读，凝心血之力搞了这个二次开发的界面模块，~~纯属瞎搞~~，有兴趣的朋友可以看看源代码，帮我找找 bug，提提建议啥的。
 
