--- a/docs/tutorials/1-2.md
+++ b/docs/tutorials/1-2.md
@@ -2,15 +2,14 @@
 comments: true
 ---
 
-§1.2 认识 tkintertools
-======================
+# §1.2 认识 tkintertools
 
-一、基本介绍
------------
+## 一、基本介绍
 
 `tkintertools` 是一款基于 `tkinter` 模块、二次开发的轻量级界面编程模块。它的设计初心是为了辅助 `tkinter` 进行界面的开发，以达到 **美化界面**、**快捷开发**、**简单易用** 的目的。
 
 !!! tip "提示"
+
     想要充分地利用 `tkintertools` 模块，开发人员首先要对 `tkinter` 模块有一定的了解（不需要了解太多）！
 
 ### 1.1 基本原理
@@ -26,19 +25,18 @@ tkintertools 的控件并非真实的控件，而是在 tkinter 模块中 `Canva
 `tkintertools` 完全没有使用任何第三方模块和库，同时它也没有任何依赖包（除了 `tkinter` 本身），它的功能完全由内置模块和函数实现，而且它还是跨平台的！  
 它的控件是在 `tkinter` 模块中 `Canvas` 对象中绘制而成的，这就赋予了 `tkintertools` 控件一些在 `tkinter` 中没有的特性，列举如下：
 
-* 控件背景可以是透明的（实际上就是没有填充颜色）；
-* 控件的样式是高度自定义的（比如按钮有圆角）；
-* 模块十分轻量，模块本身不包含任何资源文件，只有代码，且没有任何第三方模块的依赖，且只有仅仅一百多 KB，不像那些大型的库，动不动就几十 MB；
+- 控件背景可以是透明的（实际上就是没有填充颜色）；
+- 控件的样式是高度自定义的（比如按钮有圆角）；
+- 模块十分轻量，模块本身不包含任何资源文件，只有代码，且没有任何第三方模块的依赖，且只有仅仅一百多 KB，不像那些大型的库，动不动就几十 MB；
 
 ### 1.3 模块缺点
 
 模块使用了原生的 `Canvas` 对象作为底层基础，必然就牺牲了一些特性，同时还产生了一些缺点：
 
-* 虚拟的控件无法获取焦点（Tab 键切换的那个焦点）；
-* 虚拟的控件在文本输入和显示的功能上存在一些缺陷，文本可能会显示在边框外面；
+- 虚拟的控件无法获取焦点（Tab 键切换的那个焦点）；
+- 虚拟的控件在文本输入和显示的功能上存在一些缺陷，文本可能会显示在边框外面；
 
-二、特色功能
------------
+## 二、特色功能
 
 下面列举一些 `tkintertools` 模块还具有的一些特色功能（不一定完整）。
 
@@ -47,7 +45,7 @@ tkintertools 的控件并非真实的控件，而是在 tkinter 模块中 `Canva
 `tkintertools` 模块的控件拥有许多参数供我们设置，比如圆角的半径、文本和边框以及控件内部的颜色，关联事件等等。  
 这里要说明的是，每个控件可以设置的关联事件不止一种，在鼠标经过控件时可以绑定事件，鼠标点击控件也可以，鼠标点击后松开也行等等。  
 文本和边框以及控件的填充色也是类似的，在鼠标经过控件、点击控件、点击后松开都可以设定颜色。  
-文本类控件还能够从右边逐步输入文本，文本输入提示符也可以不是单调无趣的竖线，可以是其他的，比如下划线等。  
+文本类控件还能够从右边逐步输入文本，文本输入提示符也可以不是单调无趣的竖线，可以是其他的，比如下划线等。
 
 下面给大家简单展示几张图，让大家感受一下效果！
 
@@ -326,9 +324,9 @@ root.mainloop()
 
 但我估摸着通过测试的要求应该是下面这样的：
 
-* `Windows`: 版本大于等于 7 应该都行，简单说就是 Windows 7 及以上
-* `macOS`: 版本大于 11 的应该可以，更低版本的没有测试过
-* `Linux`: 没啥大问题，应该都可以
+- `Windows`: 版本大于等于 7 应该都行，简单说就是 Windows 7 及以上
+- `macOS`: 版本大于 11 的应该可以，更低版本的没有测试过
+- `Linux`: 没啥大问题，应该都可以
 
 不同操作系统上的具体效果（并非完全一样，有一点点区别）可以在下一节末尾看到，这里就不展示啦。
 
