--- a/docs/tutorials/5-2.md
+++ b/docs/tutorials/5-2.md
@@ -2,11 +2,9 @@
 comments: true
 ---
 
-§5.2 动态图片
-============
+# §5.2 动态图片
 
-一、解析 gif 的方式
-------------------
+## 一、解析 gif 的方式
 
 解析 gif 实际就是得到 gif 文件的每一帧信息并存储起来，根据不同的需求，`tkintertools.PhotoImage` 提供了两种解析 gif 的方式，分别是运行前解析和运行时解析。从名字上不难知道是什么意思。
 
@@ -22,8 +20,7 @@ comments: true
 
 两种解析方式各有特点，按需选取合适的解析方式。一般来说，大文件一定要用运行时解析，不然阻塞时间会让你怀疑人生的……当然你也可以偷懒，全部用运行时解析，为什么可以偷懒呢？因为不用写解析部分的代码（~~别看我，我就是这么干的~~）。
 
-二、运行前解析 gif
------------------
+## 二、运行前解析 gif
 
 我们通过 PhotoImage.parse 得到解析生成器，此生成器每次返回一个 int 类型的数据，以表示当前解析的帧数。我们需要遍历这个生成器来完成解析过程。以下是示例代码：
 
@@ -45,10 +42,10 @@ root.mainloop()
 ```
 
 !!! question "猜你想问：为什么不直接给 `PhotoImage` 写一个简单方法来完成整个解析过程，非要写这么个麻烦的过程？"
+
     那必然，是有原因的啊！有些人可能需要知道当前解析到什么地步了，并在每个解析步骤设置回调函数（比如进度条的更新），于是就设计了这个生成器来完成这个功能，这些将在下一节中详细讲述。
 
-三、运行时解析 gif
------------------
+## 三、运行时解析 gif
 
 运行时解析，想必大家应该都已经明白什么意思了，这里直接给代码了。为什么直接给代码呢？因为相比于上面代码，只有少，没有多的。
 
@@ -71,14 +68,14 @@ root.mainloop()
 
 你没看错，就是注释掉了解析部分的代码……具体区别，你运行一下总帧数比较大的 gif 文件就知道了。
 
-四、gif 动图相关操作
--------------------
+## 四、gif 动图相关操作
 
 ### 4.1 播放
 
 从上文中可以看出，`PhotoImage.start` 就是播放了。
 
 !!! warning "警告"
+
     没事别调用两遍 `start` 方法，这样的话 gif 的播放会卡碟的……你可以试一试。
 
 ### 4.2 暂停或继续
