--- a/docs/tutorials/2.6.21/0-1.md
+++ b/docs/tutorials/2.6.21/0-1.md
@@ -2,15 +2,17 @@
 comments: true
 ---
 
-# 前言
+# §0.0 前言
 
-!!! info "注意"
+!!! warning "特别注意"
 
     目前此教程对应的环境如下：
 
-    * tkintertools: `2.6.21`
+    * tkintertools: `2.6.21.1`
     * Python: `3.12.0`
     * Windows: `23H2`
+
+    若您需要的教程不是该版本，请在网页左上切换版本！
 
 ## 一、本教程面向的群众
 
