--- a/docs/tutorials/2.6.21/1-1.md
+++ b/docs/tutorials/2.6.21/1-1.md
@@ -119,7 +119,7 @@ pip install tkintertools==*.*.*.alpha2
 
 ### 4.1 更新版本
 
-你可以手动更新版本，也可以通过某些软件来更新版本。若使用 PyCharm，则可以打开其软件包管理器，在里面找到 `tkintertools` 来更新。手动跟香港，可打开终端，在进入对应 Python 环境（非交互环境）后输入以下指令来更新：
+你可以手动更新版本，也可以通过某些软件来更新版本。若使用 PyCharm，则可以打开其软件包管理器，在里面找到 `tkintertools` 来更新。手动更新，可打开终端，在进入对应 Python 环境（非交互环境）后输入以下指令来更新：
 
 ```
 pip install --upgrade tkintertools
