--- a/docs/tutorials/2.6.21/6-1.md
+++ b/docs/tutorials/2.6.21/6-1.md
@@ -67,7 +67,7 @@ print(tkt.color("red"))  # "#00FFFF"
 
 ### 2.2 获取渐变色
 
-实际获取渐变色并非 `tkintertools.color` 的主要功能，函数 `color` 有几个参数，可见 [函数 color 的文档](../documents/main.md#03-color)。不难知道，`color` 的主要功能是得到一个颜色字符串按比例到目标颜色字符串的结果。当这个比例为 1 的时候，返回值就是目标颜色字符串，而目标颜色字符串的默认值是对比色，默认比例也是 1，因此当没有其他参数的时候，返回值就是对比色（见上面 [2.1 获取对比色](#21-获取对比色)）。
+实际获取渐变色并非 `tkintertools.color` 的主要功能，函数 `color` 有几个参数，可见 [函数 color 的文档](../../documents/2.6.21/main.md#03-color)。不难知道，`color` 的主要功能是得到一个颜色字符串按比例到目标颜色字符串的结果。当这个比例为 1 的时候，返回值就是目标颜色字符串，而目标颜色字符串的默认值是对比色，默认比例也是 1，因此当没有其他参数的时候，返回值就是对比色（见上面 [2.1 获取对比色](#21-获取对比色)）。
 
 当这个比例是慢慢变化的，我们就可以得到渐变色的效果了。当然，我们不应该通过循环来获取每一个比例的颜色，毕竟颜色字符串转换成 RGB 颜色码是需要花费一定时间的，如果直接手动循环得到渐变色，那么将十分消耗性能，我们应该通过参数 `seqlength` 来得到一系列渐变色。下面是一个简单的示例：
 
