--- a/docs/tutorials/6-2.md
+++ b/docs/tutorials/6-2.md
@@ -4,7 +4,7 @@ comments: true
 
 # §6.2 动画制作
 
-`tkintertools` 中的大部分动画都是用动画类 `Animation` 实现的。`Animation` 的文档见 [01. Animation](../../documents/2.6.21/main.md#01-animation)。
+`tkintertools` 中的大部分动画都是用动画类 `Animation` 实现的。`Animation` 的文档见 [01. Animation](../documents/main.md#01-animation)。
 
 ## 一、简单动画
 
