--- a/docs/projects/pages/2.md
+++ b/docs/projects/pages/2.md
@@ -6,10 +6,10 @@ comments: true
 
 A Chinese chess program based on `tkintertools` and written in pure Python.
 
-* 🔖 Version - 版本: `1.8`
-* 📦 Framework - 框架: `tkintertools 2.5.9.5`
-* ✏️ Author - 作者: [Xiaokang2022](https://github.com/Xiaokang2022)
-* 🚀 GitHub - 仓库: https://github.com/Xiaokang2022/Chess
+* 🔖 Version / 版本: `1.8`
+* 📦 Framework / 框架: `tkintertools 2.5.9.5`
+* ✏️ Author / 作者: [Xiaokang2022](https://github.com/Xiaokang2022)
+* 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/Chess
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/Chess?label=Watchers&logo=github&style=flat" title="Watchers" />
 <img alt="Forks" src="https://img.shields.io/github/forks/Xiaokang2022/Chess?label=Forks&logo=github&style=flat" title="Forks" />
