--- a/docs/projects/official/3.md
+++ b/docs/projects/official/3.md
@@ -8,7 +8,7 @@ A backgammon game based on `tkintertools`.
 
 * 🔖 Version / 版本: `2.0`
 * 📦 Framework / 框架: `tkintertools 2.6.21.1`
-* ✏️ Author / 作者: [Xiaokang2022](https://github.com/Xiaokang2022)
+* ✏️ Author / 作者: https://github.com/Xiaokang2022
 * 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/Super-Gobang
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/Super-Gobang?label=Watchers&logo=github&style=flat" title="Watchers" />
