--- a/docs/projects/users/1.md
+++ b/docs/projects/users/1.md
@@ -8,7 +8,7 @@ comments: true
 
 * 🔖 Version / 版本:
 * 📦 Framework / 框架: `tkintertools 3.0.0.beta1`
-* ✏️ Author / 作者: [SHTLUOLEI](https://github.com/SHTLUOLEI)
+* ✏️ Author / 作者: https://github.com/SHTLUOLEI
 * 🚀 GitHub / 仓库: https://github.com/SHTLUOLEI/Login2.0
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/SHTLUOLEI/Login2.0?label=Watchers&logo=github&style=flat" title="Watchers" />
@@ -18,4 +18,5 @@ comments: true
 <img alt="Pull Requests" src="https://img.shields.io/github/issues-pr/SHTLUOLEI/Login2.0?label=Pull%20Requests&logo=github&style=flat" title="Pull Requests" />
 <img alt="Discussions" src="https://img.shields.io/github/discussions/SHTLUOLEI/Login2.0?label=Discussions&logo=github&style=flat" title="Discussions" />
 
-![png](https://github.com/SHTLUOLEI/Login2.0/assets/112939682/aeeaa62f-1c77-4129-aeca-140fa97aec91)
+![light](https://github.com/SHTLUOLEI/Login2.0/assets/112939682/aeeaa62f-1c77-4129-aeca-140fa97aec91#only-light)
+![dark](https://github.com/SHTLUOLEI/Login2.0/assets/112939682/d1fcbdbe-432f-46bc-95fc-f838e3b534b3#only-dark)
