--- a/docs/projects/official/1.md
+++ b/docs/projects/official/1.md
@@ -8,7 +8,7 @@ A variety of intelligent search algorithms visually restore the 3D Magic Cube.
 
 * 🔖 Version / 版本: `1.2`
 * 📦 Framework / 框架: `tkintertools 2.6.21.1`
-* ✏️ Author / 作者: [Xiaokang2022](https://github.com/Xiaokang2022)
+* ✏️ Author / 作者: https://github.com/Xiaokang2022
 * 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/Intelligent-Magic-Cube
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/Intelligent-Magic-Cube?label=Watchers&logo=github&style=flat" title="Watchers" />
