--- a/docs/projects/official/2.md
+++ b/docs/projects/official/2.md
@@ -8,7 +8,7 @@ A Chinese chess program based on `tkintertools` and written in pure Python.
 
 * 🔖 Version / 版本: `1.8`
 * 📦 Framework / 框架: `tkintertools 2.5.9.5`
-* ✏️ Author / 作者: [Xiaokang2022](https://github.com/Xiaokang2022)
+* ✏️ Author / 作者: https://github.com/Xiaokang2022
 * 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/Chess
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/Chess?label=Watchers&logo=github&style=flat" title="Watchers" />
