--- a/docs/projects/official/4.md
+++ b/docs/projects/official/4.md
@@ -8,7 +8,7 @@ A small applet for a to-do list based on `tkintertools`.
 
 * 🔖 Version / 版本: `1.0`
 * 📦 Framework / 框架: `tkintertools 2.5.9`
-* ✏️ Author / 作者: [Xiaokang2022](https://github.com/Xiaokang2022)
+* ✏️ Author / 作者: https://github.com/Xiaokang2022
 * 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/TodoList
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/TodoList?label=Watchers&logo=github&style=flat" title="Watchers" />
