--- a/docs/projects/users/1.md
+++ b/docs/projects/users/1.md
@@ -6,17 +6,17 @@ comments: true
 
 基于TKT3的登录界面
 
-* 🔖 Version / 版本:
-* 📦 Framework / 框架: `tkintertools 3.0.0.beta1`
-* ✏️ Author / 作者: https://github.com/SHTLUOLEI
-* 🚀 GitHub / 仓库: https://github.com/SHTLUOLEI/Login2.0
+* 🔖 项目版本:
+* 📦 框架版本: `tkintertools 3.0.0.beta1`
+* ✏️ 项目作者: https://github.com/SHTLUOLEI
+* 🚀 项目存储库: https://github.com/SHTLUOLEI/Login2.0
 
-<img alt="Watchers" src="https://img.shields.io/github/watchers/SHTLUOLEI/Login2.0?label=Watchers&logo=github&style=flat" title="Watchers" />
-<img alt="Forks" src="https://img.shields.io/github/forks/SHTLUOLEI/Login2.0?label=Forks&logo=github&style=flat" title="Forks" />
-<img alt="Stars" src="https://img.shields.io/github/stars/SHTLUOLEI/Login2.0?label=Stars&color=gold&logo=github&style=flat" title="Stars" />
-<img alt="Issues" src="https://img.shields.io/github/issues/SHTLUOLEI/Login2.0?label=Issues&logo=github&style=flat" title="Issues" />
-<img alt="Pull Requests" src="https://img.shields.io/github/issues-pr/SHTLUOLEI/Login2.0?label=Pull%20Requests&logo=github&style=flat" title="Pull Requests" />
-<img alt="Discussions" src="https://img.shields.io/github/discussions/SHTLUOLEI/Login2.0?label=Discussions&logo=github&style=flat" title="Discussions" />
+<img alt="关注" src="https://img.shields.io/github/watchers/SHTLUOLEI/Login2.0?label=Watchers&logo=github&style=flat" title="关注" />
+<img alt="分支" src="https://img.shields.io/github/forks/SHTLUOLEI/Login2.0?label=Forks&logo=github&style=flat" title="分支" />
+<img alt="星标" src="https://img.shields.io/github/stars/SHTLUOLEI/Login2.0?label=Stars&color=gold&logo=github&style=flat" title="星标" />
+<img alt="议题" src="https://img.shields.io/github/issues/SHTLUOLEI/Login2.0?label=Issues&logo=github&style=flat" title="议题" />
+<img alt="拉取请求" src="https://img.shields.io/github/issues-pr/SHTLUOLEI/Login2.0?label=Pull%20Requests&logo=github&style=flat" title="拉取请求" />
+<img alt="讨论" src="https://img.shields.io/github/discussions/SHTLUOLEI/Login2.0?label=Discussions&logo=github&style=flat" title="讨论" />
 
 ![light](https://github.com/SHTLUOLEI/Login2.0/assets/112939682/aeeaa62f-1c77-4129-aeca-140fa97aec91#only-light)
 ![dark](https://github.com/SHTLUOLEI/Login2.0/assets/112939682/d1fcbdbe-432f-46bc-95fc-f838e3b534b3#only-dark)
