--- a/en/docs/projects/official/4.md
+++ b/en/docs/projects/official/4.md
@@ -6,10 +6,10 @@ comments: true
 
 A small applet for a to-do list based on `tkintertools`.
 
-* 🔖 Version / 版本: `1.0`
-* 📦 Framework / 框架: `tkintertools 2.5.9`
-* ✏️ Author / 作者: https://github.com/Xiaokang2022
-* 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/TodoList
+* 🔖 Version: `1.0`
+* 📦 Framework: `tkintertools 2.5.9`
+* ✏️ Author: https://github.com/Xiaokang2022
+* 🚀 GitHub: https://github.com/Xiaokang2022/TodoList
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/TodoList?label=Watchers&logo=github&style=flat" title="Watchers" />
 <img alt="Forks" src="https://img.shields.io/github/forks/Xiaokang2022/TodoList?label=Forks&logo=github&style=flat" title="Forks" />
