--- a/en/docs/projects/users/1.md
+++ b/en/docs/projects/users/1.md
@@ -6,10 +6,10 @@ comments: true
 
 基于TKT3的登录界面
 
-* 🔖 Version / 版本:
-* 📦 Framework / 框架: `tkintertools 3.0.0.beta1`
-* ✏️ Author / 作者: https://github.com/SHTLUOLEI
-* 🚀 GitHub / 仓库: https://github.com/SHTLUOLEI/Login2.0
+* 🔖 Version:
+* 📦 Framework: `tkintertools 3.0.0.beta1`
+* ✏️ Author: https://github.com/SHTLUOLEI
+* 🚀 GitHub: https://github.com/SHTLUOLEI/Login2.0
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/SHTLUOLEI/Login2.0?label=Watchers&logo=github&style=flat" title="Watchers" />
 <img alt="Forks" src="https://img.shields.io/github/forks/SHTLUOLEI/Login2.0?label=Forks&logo=github&style=flat" title="Forks" />
