--- a/docs/projects/official/4.md
+++ b/docs/projects/official/4.md
@@ -6,16 +6,16 @@ comments: true
 
 A small applet for a to-do list based on `tkintertools`.
 
-* 🔖 Version / 版本: `1.0`
-* 📦 Framework / 框架: `tkintertools 2.5.9`
-* ✏️ Author / 作者: https://github.com/Xiaokang2022
-* 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/TodoList
+* 🔖 项目版本: `1.0`
+* 📦 框架版本: `tkintertools 2.5.9`
+* ✏️ 项目作者: https://github.com/Xiaokang2022
+* 🚀 项目存储库: https://github.com/Xiaokang2022/TodoList
 
-<img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/TodoList?label=Watchers&logo=github&style=flat" title="Watchers" />
-<img alt="Forks" src="https://img.shields.io/github/forks/Xiaokang2022/TodoList?label=Forks&logo=github&style=flat" title="Forks" />
-<img alt="Stars" src="https://img.shields.io/github/stars/Xiaokang2022/TodoList?label=Stars&color=gold&logo=github&style=flat" title="Stars" />
-<img alt="Issues" src="https://img.shields.io/github/issues/Xiaokang2022/TodoList?label=Issues&logo=github&style=flat" title="Issues" />
-<img alt="Pull Requests" src="https://img.shields.io/github/issues-pr/Xiaokang2022/TodoList?label=Pull%20Requests&logo=github&style=flat" title="Pull Requests" />
-<img alt="Discussions" src="https://img.shields.io/github/discussions/Xiaokang2022/TodoList?label=Discussions&logo=github&style=flat" title="Discussions" />
+<img alt="关注" src="https://img.shields.io/github/watchers/Xiaokang2022/TodoList?label=Watchers&logo=github&style=flat" title="关注" />
+<img alt="分支" src="https://img.shields.io/github/forks/Xiaokang2022/TodoList?label=Forks&logo=github&style=flat" title="分支" />
+<img alt="星标" src="https://img.shields.io/github/stars/Xiaokang2022/TodoList?label=Stars&color=gold&logo=github&style=flat" title="星标" />
+<img alt="议题" src="https://img.shields.io/github/issues/Xiaokang2022/TodoList?label=Issues&logo=github&style=flat" title="议题" />
+<img alt="拉取请求" src="https://img.shields.io/github/issues-pr/Xiaokang2022/TodoList?label=Pull%20Requests&logo=github&style=flat" title="拉取请求" />
+<img alt="讨论" src="https://img.shields.io/github/discussions/Xiaokang2022/TodoList?label=Discussions&logo=github&style=flat" title="讨论" />
 
 ![](https://github.com/Xiaokang2022/TodoList/blob/master/preview.png?raw=true)
