--- a/en/docs/projects/official/3.md
+++ b/en/docs/projects/official/3.md
@@ -6,10 +6,10 @@ comments: true
 
 A backgammon game based on `tkintertools`.
 
-* 🔖 Version / 版本: `2.0`
-* 📦 Framework / 框架: `tkintertools 2.6.21.1`
-* ✏️ Author / 作者: https://github.com/Xiaokang2022
-* 🚀 GitHub / 仓库: https://github.com/Xiaokang2022/Super-Gobang
+* 🔖 Version: `2.0`
+* 📦 Framework: `tkintertools 2.6.21.1`
+* ✏️ Author: https://github.com/Xiaokang2022
+* 🚀 GitHub: https://github.com/Xiaokang2022/Super-Gobang
 
 <img alt="Watchers" src="https://img.shields.io/github/watchers/Xiaokang2022/Super-Gobang?label=Watchers&logo=github&style=flat" title="Watchers" />
 <img alt="Forks" src="https://img.shields.io/github/forks/Xiaokang2022/Super-Gobang?label=Forks&logo=github&style=flat" title="Forks" />
