--- a/docs/projects/users/1.md
+++ b/docs/projects/users/1.md
@@ -12,7 +12,7 @@ comments: true
 * 🚀 项目存储库: https://github.com/SHTLUOLEI/Login2.0
 
 <img alt="关注" src="https://img.shields.io/github/watchers/SHTLUOLEI/Login2.0?label=Watchers&logo=github&style=flat" title="关注" />
-<img alt="分支" src="https://img.shields.io/github/forks/SHTLUOLEI/Login2.0?label=Forks&logo=github&style=flat" title="分支" />
+<img alt="复刻" src="https://img.shields.io/github/forks/SHTLUOLEI/Login2.0?label=Forks&logo=github&style=flat" title="复刻" />
 <img alt="星标" src="https://img.shields.io/github/stars/SHTLUOLEI/Login2.0?label=Stars&color=gold&logo=github&style=flat" title="星标" />
 <img alt="议题" src="https://img.shields.io/github/issues/SHTLUOLEI/Login2.0?label=Issues&logo=github&style=flat" title="议题" />
 <img alt="拉取请求" src="https://img.shields.io/github/issues-pr/SHTLUOLEI/Login2.0?label=Pull%20Requests&logo=github&style=flat" title="拉取请求" />
