--- a/docs/projects/official/1.md
+++ b/docs/projects/official/1.md
@@ -12,7 +12,7 @@ A variety of intelligent search algorithms visually restore the 3D Magic Cube.
 * 🚀 项目存储库: https://github.com/Xiaokang2022/Intelligent-Magic-Cube
 
 <img alt="关注" src="https://img.shields.io/github/watchers/Xiaokang2022/Intelligent-Magic-Cube?label=Watchers&logo=github&style=flat" title="关注" />
-<img alt="分支" src="https://img.shields.io/github/forks/Xiaokang2022/Intelligent-Magic-Cube?label=Forks&logo=github&style=flat" title="分支" />
+<img alt="复刻" src="https://img.shields.io/github/forks/Xiaokang2022/Intelligent-Magic-Cube?label=Forks&logo=github&style=flat" title="复刻" />
 <img alt="星标" src="https://img.shields.io/github/stars/Xiaokang2022/Intelligent-Magic-Cube?label=Stars&color=gold&logo=github&style=flat" title="星标" />
 <img alt="议题" src="https://img.shields.io/github/issues/Xiaokang2022/Intelligent-Magic-Cube?label=Issues&logo=github&style=flat" title="议题" />
 <img alt="拉取请求" src="https://img.shields.io/github/issues-pr/Xiaokang2022/Intelligent-Magic-Cube?label=Pull%20Requests&logo=github&style=flat" title="拉取请求" />
