style: improve blog

--- a/docs/blog/posts/official/1.md
+++ b/docs/blog/posts/official/1.md
@@ -2,7 +2,7 @@
 comments: true
 date:
     created: 9999-09-09
-    updated: 2024-11-11
+    updated: 2024-11-12
 authors:
     - Xiaokang2022
 categories:
@@ -34,6 +34,8 @@ tags:
 
 此处列出当前项目文档站所使用到的开源项目，可能存在缺漏（“改”字表示被我魔改了）：
 
+直接依赖项目：
+
 * 基础：
     + 框架：<https://github.com/mkdocs/mkdocs>
     + 主题：<https://github.com/squidfunk/mkdocs-material>
@@ -56,7 +58,20 @@ tags:
     + 字体图标：<https://github.com/FortAwesome/Font-Awesome>
     + 鼠标点击特效：<https://github.com/ColdDay/click-colorful>
 
-上述是直接依赖的项目，此外还参考了很多很多其他的项目，此处就不单独列出了。
+参考项目，部分改编：
+
+* 主题：
+    * 主题配色：<https://github.com/TonyCrane/note>
+    * 顶栏半透明效果：<https://github.com/krahets/hello-algo>
+    * 单页右上角下载按钮：<https://github.com/timvink/mkdocs-print-site-plugin>
+    * 哔哩哔哩视频 `iframe` 大小适配：<https://github.com/krahets/hello-algo>
+
+未在此文档站中展现，在测试中的功能：
+
+* 其他：
+    * 多语言代码在线可视化（可用）：<https://github.com/Xiaokang2022/Fucking-Code/>
+    * Live2D 看板娘（存在问题）：<https://github.com/oh-my-live2d/oh-my-live2d>
+    * Live2D 看板娘解决方案二（存在问题）：<https://github.com/stevenjoezhang/live2d-widget>
 
 ## 二、我们的计划
 
